syntax = "proto3";

package awa;

service LiveTrackService {
  rpc Record(stream LiveTrackRequest) returns (stream LiveTrackResponse);
}

message LiveTrackRequest {
  // client generated id.
  string id = 1;
  // user id.
  string owner = 2;
  map<string, string> tags = 3;
  // timestamp in seconds.
  int64 timestamp = 4;

  // device information.
  string device_id = 5;
  string device_type = 6;
  string firmware_version = 7;

  oneof content {
    LiveTrackSegment segment = 8;
    LiveTrackPosition position = 9;
  }
}

message LiveTrackSegment {
  int32 length = 1;
  // BigEndian
  // for each point:
  // [float: lon]
  // [float: lat]
  // [unsigned short (16 bits): altitude - 20000 in meters]
  // [12 unsigned bits: time_offset in seconds since in seconds]
  // [unsigned byte: horizontal accuracy in meters]
  // [unsigned byte: altitude accuracy in meters]
  // [4 bits: reserved]
  bytes data = 3;
}

message LiveTrackPosition {
  // BigEndian
  // [float: lon]
  // [float: lat]
  // [unsigned short (16 bits): altitude - 20000 in meters]
  // [unsigned byte: horizontal accuracy in meters]
  // [unsigned byte: altitude accuracy in meters]
  bytes data = 2;
}

message LiveTrackResponse {
  string request_id = 1;
  oneof content {
    LiveTrackSuccess success = 2;
    LiveTrackError error = 3;
  }
}

message LiveTrackError {
  // The error type.
  string type = 1;
  // An summary of the error.
  string message = 2;
  // the error code is alphanumeric.
  string code = 3;

  // additional data.
  map<string, string> details = 4;
}

message LiveTrackSuccess {
  repeated Notification notification = 1;
  repeated TotemNotification totem_notification = 2;
}

message TotemNotification {
  string id = 1;
  string title = 2;
  string summary = 3;
  string theme_color = 4;
  string icon_url = 5;
  float lon = 6;
  float lat = 7;
  int32 altitude = 8;
}

message Notification {
  string id = 1;
  string title = 2;
  string summary = 3;
  string theme_color = 4;
}