syntax = "proto3";

package awa.v1;

service UserObjectStorage {
  rpc StoreObject(StoreObjectRequest) returns (StoreObjectResponse);
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse);
  rpc ListFolder(ListFolderRequest) returns (ListFolderResponse);
  rpc RemoveObject(RemoveObjectRequest) returns (RemoveObjectResponse);
  rpc RemoveFolder(RemoveFolderRequest) returns (RemoveFolderResponse);
}

service SystemObjectStorege {
  rpc ListFolder(ListFolderRequest) returns (ListFolderResponse);
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse);
}

message StoreObjectRequest {
  // generated by client, used for tracing purposes.
  string trace_id = 1;
  string folder = 2;
  string name = 3;
  string content_type = 4;
  bytes content = 5;
}

message Error {
  string code = 1;
  string message = 2;
}

message StoreObjectResponse {
  string trace_id = 1;
  oneof content {
    ObjectItem object_item = 2;
    Error error = 3;
  }
}

message GetObjectRequest {
  string trace_id = 1;
  string folder = 2;
  string name = 3;
}

message GetObjectResponse {
  string trace_id = 1;
  oneof content {
    StoredObject stored_object = 2;
    Error error = 3;
  }
}

message StoredObject {
  string folder = 1;
  string name = 2;
  string content_type = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  bytes content = 6;
}

message RemoveObjectRequest {
  string trace_id = 1;
  string folder = 2;
  string name = 3;
}

message RemoveObjectResponse {
  string trace_id = 1;
  oneof content {
    RemovedObject removed_object = 2;
    Error error = 3;
  }
}

message RemovedObject {
  string folder = 1;
  string name = 2;
  bool existed = 3;
}

message ListFolderRequest {
  string trace_id = 1;
  string folder = 2;
}

message ListFolderResponse {
  string trace_id = 1;
  oneof content {
    FolderContent folder_content = 2;
    Error error = 3;
  }
}

message FolderContent { repeated ObjectItem object_items = 1; }

message ObjectItem {
  string folder = 1;
  string name = 2;
  string content_type = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message RemoveFolderRequest {
  string trace_id = 1;
  string folder = 2;
}

message RemoveFolderResponse {
  string trace_id = 1;
  oneof content {
    RemovedFolder removed_folder = 2;
    Error error = 3;
  }
}

message RemovedFolder {
  string folder = 1;
  bool existed = 2;
}